objects/Diet__c.object
<CustomObject>
    <description>Created for Marketing cloud Survey</description>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DIETs</relationshipLabel>
        <relationshipName>Diets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>created for diet marketing cloud survey</description>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Created for diet marketing cloud survey.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fresh_vegetables_you_eat_each_day__c</fullName>
        <description>How many servings of fresh, canned, frozen, or dried vegetables did you eat each day?</description>
        <inlineHelpText>How many servings of fresh, canned, frozen, or dried vegetables did you eat each day?</inlineHelpText>
        <label>DIET_v1.0.3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_many_years_you_ve_eaten_diet__c</fullName>
        <description>Approximately how many years do you think you’ve eaten the diet you described above?</description>
        <inlineHelpText>Approximately how many years do you think you’ve eaten the diet you described above?</inlineHelpText>
        <label>DIET_v1.0.11</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_would_you_best_describe_your_diet__c</fullName>
        <description>How would you best describe your diet?</description>
        <inlineHelpText>How would you best describe your diet?</inlineHelpText>
        <label>DIET_v1.0.10</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_times_dairy_products_eaten_a_day__c</fullName>
        <description>How many times a day did you eat dairy products (milk, yogurt, cheese)?</description>
        <inlineHelpText>How many times a day did you eat dairy products (milk, yogurt, cheese)?</inlineHelpText>
        <label>DIET_v1.0.8</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_times_fish_or_beans_eaten_a_day__c</fullName>
        <description>How many times a day did you eat fish or beans?</description>
        <inlineHelpText>How many times a day did you eat fish or beans?</inlineHelpText>
        <label>DIET_v1.0.9</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_times_fried_food_eaten_in_a_day__c</fullName>
        <description>How many times a day did you eat fried food or packaged snacks high in fat, salt, or sugar?</description>
        <inlineHelpText>How many times a day did you eat fried food or packaged snacks high in fat, salt, or sugar?</inlineHelpText>
        <label>DIET_v1.0.4</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_times_meat_eaten_in_a_day__c</fullName>
        <description>How many servings (1 serving = 3 to 6 ounces) of meat (beef, pork, chicken) did you eat each day?</description>
        <inlineHelpText>How many servings (1 serving = 3 to 6 ounces) of meat (beef, pork, chicken) did you eat each day?</inlineHelpText>
        <label>DIET_v1.0.7</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_times_sweet_foods_eaten_in_a_day__c</fullName>
        <description>How many times a day did you eat sweet foods (not the low-fat kind) or desserts, like chocolate or ice cream, and other sweets?</description>
        <inlineHelpText>How many times a day did you eat sweet foods (not the low-fat kind) or desserts, like chocolate or ice cream, and other sweets?</inlineHelpText>
        <label>DIET_v1.0.5</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_your_healthy_eating_habits__c</fullName>
        <description>How would you rate your overall habits of eating healthy foods?</description>
        <inlineHelpText>How would you rate your overall habits of eating healthy foods?</inlineHelpText>
        <label>DIET_v1.0.1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servings_of_fresh_fruit_you_eat_each_day__c</fullName>
        <description>How many servings (1serving = 1/2 cup) of fresh, canned, frozen, or dried fruit did you eat each day?</description>
        <inlineHelpText>How many servings (1serving = 1/2 cup) of fresh, canned, frozen, or dried fruit did you eat each day?</inlineHelpText>
        <label>DIET_v1.0.2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sweetened_beverages_eaten_in_a_day__c</fullName>
        <description>How many regular soda, sweet tea, juice, energy/sports drinks, sweetened coffee, or other sugar sweetened beverages did you drink each day?</description>
        <inlineHelpText>How many regular soda, sweet tea, juice, energy/sports drinks, sweetened coffee, or other sugar sweetened beverages did you drink each day?</inlineHelpText>
        <label>DIET_v1.0.6</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>DIET</label>
    <nameField>
        <displayFormat>DIET-{0000000000}</displayFormat>
        <label>DIET Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DIETs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>